erDiagram
  users {
    integer id PK
    varchar name
    timestamp inserted_at
    timestamp updated_at
  }
  attendees {
    integer id PK
    varchar role
    jsonb config
    integer meeting_id
    integer user_id
    timestamp inserted_at
    timestamp updated_at
  }
  invitations {
    integer id PK
    varchar code
    timestamp expires_at
    integer meeting_id
    timestamp inserted_at
    timestamp updated_at
  }
  meetings {
    integer id PK
    varchar title
    jsonb config
    timestamp inserted_at
    timestamp updated_at
  }
  schema_migrations {
    integer version PK
    timestamp inserted_at
  }
  meetings ||--|{ attendees : ""
  meetings ||--|{ invitations : ""
  users ||--|{ attendees : ""
